# arch_backup

./: README.md
configs/: .bashrc
configs/hypr/: hyprland.conf  hyprpaper.conf
configs/nvim/: init.lua  lazy-lock.json
configs/nvim/lua/config/: lazy.lua
configs/nvim/lua/plugins/: catppuccin.lua  debugging.lua  harpoon.lua  lsp-config.lua  neo-tree.lua  none-ls.lua  telescope.lua  treesitter.lua
scripts/: c_template.sh  fzf_cmd_history.sh  keyboard_backlight.sh  save_backup_to_remote.sh  special_workspace_file_manager.sh  touchpad_ctrl.sh
templates/c_template/: CMakeLists.txt  build.sh
